# estore

./: .coverage  .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_ac25f85effaea763___init___py.html  z_ac25f85effaea763_category_py.html  z_ac25f85effaea763_main_py.html  z_ac25f85effaea763_product_py.html  z_ac25f85effaea763_utils_py.html
src/estore/: baseproduct.py  category.py  lawngrass.py  main.py  mixinlog.py  product.py  smartphone.py  utils.py
tests/: conftest.py  test_baseproduct.py  test_category.py  test_lawgrass.py  test_product.py  test_smartphone.py  test_utils.py
