[tool.poetry]
name = "estore"
version = "0.1.0"
description = "Работа над интернет-магазином (проект из блока 4 ООП)"
authors = ["Дмитрий Кукуйский <kukuiski@gmail.com>"]
readme = "README.md"
packages = [{include = "estore", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
